--- a/html/index.html
+++ b/html/index.html
@@ -52,8 +52,17 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
+
           </ul>
+
         </div>
+        <div class="collapse navbar-collapse" id="navbarResponsive1">
+  <form action="/action_page.php">
+    <input type="text" placeholder="Username" name="username" size="10">
+    <input type="text" placeholder="Password" name="psw" size="10">
+    <button type="submit">Login</button>
+  </form>
+</div>
       </div>
     </nav>
 
